# area

./: .gitignore  README.md  compose.yaml
backend/core-api/: .env.example  Dockerfile  README.md  api_documentation.md  compose.yaml  pyproject.toml
backend/core-api/alembic/: env.py
backend/core-api/alembic/versions/: 247ffcd7c22f_reaction_params_on_task_for_reactions_.py  297ade6101bf_added_missing_token_id_githubtoken_table.py  41d91d50025c_tasks_and_and_events_tables.py  4396e436d7af_change_hashed_password_column_name.py  4e5be165b844_add_webhook_information_to_user.py  51d3d7d01fdb_after_model_update.py  534bd7d6b18f_added_new_processed_message_model_to_.py  5f3f18e10e82_add_ondelete_cascade.py  7097152e622a_add_processed_message_into_user_model.py  8e336419718b_modify_task_table.py  95878e6cadb7_gmail_history_id_added_ot_user_model.py  a027a9157608_add_phone_number_to_user_model_schema_.py  a5b9bdf39779_added_token_and_githubtoken_table.py  b698496f5dad_add_plan_to_user_model.py  c7b3793891b2_add_extra_pram_to_user_model.py  e284d0393103_create_user_table.py  f361c013351b_google_token.py  fe6a47308e4b_add_ondelete_cascade.py  fe7b17bd9331_google_token_minor_changes.py
backend/core-api/src/: config.py  database.py  main.py  schema.py
backend/core-api/src/auth/: config.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/core-api/src/event/: models.py  router.py  schemas.py  utils.py
backend/core-api/src/llm/: config.py  llm.py
backend/core-api/src/reaction_general/: google_cal_event.py  reddit.py  send_email.py  send_sms.py  send_usdc.py
backend/core-api/src/task/: config.py  models.py  router.py  schemas.py  service.py  utils.py
backend/core-api/src/user/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
backend/core-api/tests/: test_auth.py  test_default.py  test_events.py  test_tasks.py  test_users.py
backend/github-microservice/: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/github-microservice/src/: config.py  exceptions.py  main.py  schema.py
backend/github-microservice/src/triggers/: config.py  exceptions.py  service.py
backend/github-microservice/src/webhook/: config.py  router.py  schemas.py  service.py
backend/google-microservice/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/google-microservice/src/: main.py  schema.py
backend/google-microservice/src/triggers/: service.py
backend/google-microservice/src/webhook/: router.py  schemas.py  service.py  utils.py
frontend/mobile/: Dockerfile  app.config.js  app.json  compose.yaml  config.ts  package-lock.json  package.json  router.config.js  tsconfig.json
frontend/mobile/android/app/: build.gradle
frontend/mobile/api/: README.md  applets.ts  auth.ts  config.ts  services.ts  types.ts
frontend/mobile/app/: _layout.tsx  index.tsx
frontend/mobile/app/(app)/: _layout.tsx  profile.tsx
frontend/mobile/app/(auth)/: sign-in.jsx  sign-up.jsx
frontend/mobile/components/: CustomButton.tsx  CustomCard.tsx  CustomInput.tsx  ErrorMessage.tsx  SearchBar.tsx
frontend/mobile/components/auth/: GitHubAuth.tsx  GoogleAuth.tsx
frontend/mobile/context/: UserProvider.tsx
frontend/mobile/hooks/: useUser.ts  useUserExp.ts
frontend/mobile/ios/mobile/: Info.plist
frontend/mobile/types/: expo-constatns.d.ts
frontend/mobile/utils/: adjustColorBrightness.ts  cleanAction.ts  getFancyName.ts  secureStore.ts  serviceMap.ts
frontend/web/: .dockerignore  Dockerfile  compose.yaml  package-lock.json  package.json
(+72 files in other folders)
